--- a/assets/pug/mixin/element-user-follower.pug
+++ b/assets/pug/mixin/element-user-follower.pug
@@ -6,13 +6,13 @@
             userProfile: "Web Designer",
         },
         {
-            image: "13.png",
+            image: "19.png",
             userName: "Ally Kshlerin",
             userProfile: "Fullstack Developer",
         },
         {
             image: "23.png",
-            userName: "Ally Kshlerin",
+            userName: "Werner Barrows",
             userProfile: "Fullstack Developer",
         },
     ];
@@ -20,17 +20,17 @@
     var USER_FRIEND = [
         {
             image1: "17.png",
-            userName1: "Abdul Volkman",
+            userName1: "Gretchen Harvey",
             userProfile1: "Web Developer",
         },
         {
             image1: "16.png",
-            userName1: "Ally Kshlerin",
+            userName1: "Raegan Corkery",
             userProfile1: "Fullstack Developer",
         },
         {
             image1: "21.png",
-            userName1: "Ally Kshlerin",
+            userName1: "Josue Smith",
             userProfile1: "Fullstack Developer",
         },
     ];
@@ -48,7 +48,7 @@
         },
         {
             image2: "20.png",
-            userName2: "Ally Kshlerin",
+            userName2: "Patricia Kulas",
             userProfile2: "Fullstack Developer",
         },
     ];
