--- a/assets/pug/layout/footer-files.pug
+++ b/assets/pug/layout/footer-files.pug
@@ -128,6 +128,10 @@ if(jkanban)
   script( src="../../assets/js/jkanban.min.js") 
   script( src="../../assets/js/jkanban-custom.js")
 
+if(userCustom)
+  // userCustom js
+  script(src="../../assets/js/user-profile-custom.js") 
+
 if(customizer)
   // customizer js
   script(src="../../assets/js/customizer.js") 
