--- a/assets/pug/pages/unique/edit-profile.pug
+++ b/assets/pug/pages/unique/edit-profile.pug
@@ -13,6 +13,9 @@
 //- swiper-slider
 -var swiper=true;
 
+//- userCustom
+-var userCustom = true;
+
 //- customizer 
 -var customizer = true;
 
@@ -109,7 +112,7 @@ html(lang='en')
                                         button.tab.tabs-bordered.user-tab.flex.items-center.justify-center(data-tabFilter="3" class="text-content3 !flex-row !gap-2 tab-link 2md:w-full")
                                             i.fa-solid.fa-briefcase(class="w-4 h-4 stroke-title-content3")
                                             | Experience 
-                                        button.tab.tabs-bordered.user-tab.flex.items-center.justify-center(data-tabFilter="3" class="text-content3 !flex-row !gap-2 tab-link 2md:w-full")
+                                        button.tab.tabs-bordered.user-tab.flex.items-center.justify-center(data-tabFilter="4" class="text-content3 !flex-row !gap-2 tab-link 2md:w-full")
                                             i.fa-solid.fa-scroll(class="w-4 h-4 stroke-title-content3")
                                             | Privacy Policy 
                                 div.card-body 
@@ -229,57 +232,60 @@ html(lang='en')
                                                         p.text-content3.text-xs Logout
 
                                         div(data-tabContent="3" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0")
-                                           form(class="theme-form flex flex-col gap-4 m-0")
-                                                div
-                                                        label(for="jobtitle") Job Title
-                                                        input(type="text" id="jobtitle" placeholder="Enter your first name" required)
-                                                div.grid.grid-cols-12.gap-5
-                                                    div.col-span-6(class="sm:col-span-12")
-                                                        label(for="companyName") Company Name
-                                                        input(type="text" id="companyName" placeholder="Enter your first name" required)
-                                                    div.col-span-6(class="sm:col-span-12")
-                                                        label(for="companyName") Experience Year
+                                            form(class="theme-form flex flex-col gap-4 m-0")
+                                                div(id="newForm" class="flex flex-col gap-4 m-0")
+                                                    div(id="1" class="flex flex-col gap-4 m-0")
+                                                        div
+                                                            label(for="jobtitle") Job Title
+                                                            input(type="text" id="jobtitle" placeholder="Enter your first name" required)
                                                         div.grid.grid-cols-12.gap-5
                                                             div.col-span-6(class="sm:col-span-12")
-                                                               select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="sortby" aria-label='Default select example')
-                                                                    option(selected='') 2017
-                                                                    option(value='1') 2018
-                                                                    option(value='2') 2019
-                                                                    option(value='3') 2020
-                                                                    option(value='4') 2021
-                                                                    option(value='5') 2022 
+                                                                label(for="companyName") Company Name
+                                                                input(type="text" id="companyName" placeholder="Enter your first name" required)
                                                             div.col-span-6(class="sm:col-span-12")
-                                                                select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="sortby" aria-label='Default select example')
-                                                                    option(selected='') 2017
-                                                                    option(value='1') 2018
-                                                                    option(value='2') 2019
-                                                                    option(value='3') 2020
-                                                                    option(value='4') 2021
-                                                                    option(value='5') 2022
-                                                div 
-                                                    label(for="address") Job Description 
-                                                    textarea(placeholder="Enter your address.." row="3" id="address" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content   
-                                                
+                                                                label(for="companyName") Experience Year
+                                                                div.grid.grid-cols-12
+                                                                    div.col-span-5(class="sm:col-span-12")
+                                                                        select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="sortby" aria-label='Default select example')
+                                                                                option(selected='') 2017
+                                                                                option(value='1') 2018
+                                                                                option(value='2') 2019
+                                                                                option(value='3') 2020
+                                                                                option(value='4') 2021
+                                                                                option(value='5') 2022 
+                                                                    div.col-auto(class="flex items-center justify-center") to 
+                                                                    div.col-span-5(class="sm:col-span-12")
+                                                                        select.form-select.block.w-full.px-3.text-xs.font-normal.text-content3.bg-white.bg-clip-padding.bg-no-repeat.border.border-border-light.rounded-5.transition.ease-in-out.m-0(class='min-w-[150px] py-[9px]' id="sortby" aria-label='Default select example')
+                                                                            option(selected='') 2017
+                                                                            option(value='1') 2018
+                                                                            option(value='2') 2019
+                                                                            option(value='3') 2020
+                                                                            option(value='4') 2021
+                                                                            option(value='5') 2022
+                                                        div 
+                                                            label(for="address") Job Description 
+                                                            textarea(placeholder="Enter your address.." row="3" id="address" class="p-[11px] focus:!border-border-light").w-full.border.border-border-light.rounded-5.text-xs.text-content   
+                                                        div.text-end
+                                                            a(href="javascript:deleteEl(1)").btn.btn-primary.text-xs.text-white(class="!w-fit sm:!w-full !m-0 py-2" type='button') Delete 
+
+                                                div(id="latestForm")    
+
                                                 div.flex.justify-end.items-center.gap-3(class="sm:flex-col gap-3")
-                                                    a(href="javascript:void(0)").btn.bg-secondary.text-xs.text-white.flex.items-center.gap-2(class="!w-fit sm:!w-full justify-center !m-0 py-2" type='button') Update
-                                                    a(href="javascript:void(0)").btn.btn-primary.text-xs.text-white.flex.items-center.gap-2(class="!w-fit sm:!w-full justify-center !m-0 py-2" type='button') Delete 
+                                                    a(href="javascript:void(0)").btn.bg-secondary.text-xs.text-white(class="!w-fit sm:!w-full !m-0 py-2" type='button') Update
+                                                    a(href="javascript:new_form()").btn.btn-primary.text-xs.text-white(class="!w-fit sm:!w-full !m-0 py-2" type='button') Add 
      
                                         div(data-tabContent="4" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0")
-                                           form(class="theme-form flex flex-col gap-4 m-0")
-                                                div.grid.grid-cols-12.gap-5
-                                                    div.col-span-6(class="sm:col-span-12")
-                                                        label(for="firstName") First Name
-                                                        input(type="text" id="firstName" placeholder="Enter your first name" required)
-                                                    div.col-span-6(class="sm:col-span-12")
-                                                        label(for="lastName") Last Name
-                                                        input(type="text" id="lastName" placeholder="Enter your last name" required)
-                                                div.grid.grid-cols-12.gap-5
-                                                    div.col-span-6(class="sm:col-span-12")
-                                                        label(for="number") Contact No
-                                                        input(type="Number" id="number" placeholder="Enter your contact no" maxlength="10" pattern="\d{10}" class="rounded"  required)
-                                                    div.col-span-6(class="sm:col-span-12")
-                                                        label(for="email") Email
-                                                        input(type="email" id="email" placeholder="Enter your email id" required)      
+                                            div 
+                                                h5.font-bold Password Manager 
+                                                div.flex.items-base.justify-between.gap-2 
+                                                    div
+                                                        h6.font-semibold Offer to save passwords
+                                                    label.inline-flex.relative.items-center.cursor-pointer
+                                                        input.sr-only.peer(type='checkbox')
+                                                        span.w-7.h-4.rounded-full.peer(class="ring-2 ring-success peer-focus:ring-2 peer-focus:ring-success peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[14px] after:left-[2px] after:bg-success after:rounded-full after:h-3 after:w-3 after:transition-all")
+
+                                                
+                                                
                                             
                     
                     // Page Body End  
