--- a/assets/postcss/components/_checkbox.css
+++ b/assets/postcss/components/_checkbox.css
@@ -43,5 +43,133 @@
       @apply w-3 h-3;
     }
   }
+
+  .radio-button input[type=radio]{
+    @apply absolute invisible;
+  }
+  
+  .radio-button{
+    @apply flex items-center gap-2;
+  }
+
+  .radio-button {
+    &.radio-sm{
+      .check{
+        @apply w-4 h-4;
+        &:before{
+          @apply w-[8px] h-[8px] top-[3px] left-[3px];
+        }
+      }
+    }
+    &.radio-md{
+      .check{
+        @apply w-[1.10rem] h-[1.10rem];
+        &:before{
+          @apply w-[11px] h-[11px] top-[2px] left-[2px];
+        }
+      }
+    }
+    &.radio-lg{
+      .check{
+        @apply w-5 h-5;
+        &:before{
+          @apply w-[12px] h-[12px] top-[3px] left-[3px];
+        }
+      }
+    }
+    &.radio-xl{
+      .check{
+        @apply w-6 h-6;
+        &:before{
+          @apply w-4 h-4 top-[3px] left-[3px];
+        }
+      }
+    }
+  }
+
+  .radio-button .check{
+    @apply block relative rounded-full z-[5] w-[1.10rem] h-[1.10rem];
+    transition: border .25s linear;
+    -webkit-transition: border .25s linear;
+  }
+
+  .radio-button .check::before {
+    @apply block absolute content-[""] rounded-full m-auto w-[11px] h-[11px] top-[2px] left-[2px];
+    transition: background 0.25s linear;
+    -webkit-transition: background 0.25s linear;
+  }
+
+  .primary{
+    input[type=radio]:checked ~ .check, .check {
+      @apply border border-primary;
+    }
+  }
+  .secondary{
+    input[type=radio]:checked ~ .check, .check{
+      @apply border border-secondary;
+    }
+  }
+  .info{
+    input[type=radio]:checked ~ .check, .check{
+      @apply border border-info;
+    }
+  }
+  .success{
+    input[type=radio]:checked ~ .check, .check{
+      @apply border border-success;
+    }
+  }
+  .warning{
+    input[type=radio]:checked ~ .check, .check{
+      @apply border border-warning;
+    }
+  }
+  .danger{
+    input[type=radio]:checked ~ .check, .check{
+      @apply border border-danger;
+    }
+  }
+  .light{
+    input[type=radio]:checked ~ .check, .check{
+      @apply border border-light;
+    }
+  }
+
+
+  .primary{
+    input[type=radio]:checked ~ .check::before {
+      @apply bg-primary;
+    }
+  }
+  .secondary{
+    input[type=radio]:checked ~ .check::before {
+      @apply bg-secondary;
+    }
+  }
+  .info{
+    input[type=radio]:checked ~ .check::before {
+      @apply bg-info;
+    }
+  }
+  .success{
+    input[type=radio]:checked ~ .check::before {
+      @apply bg-success;
+    }
+  }
+  .warning{
+    input[type=radio]:checked ~ .check::before {
+      @apply bg-warning;
+    }
+  }
+  .danger{
+    input[type=radio]:checked ~ .check::before {
+      @apply bg-danger;
+    }
+  }
+  .light{
+    input[type=radio]:checked ~ .check::before {
+      @apply bg-light;
+    }
+  }
 }
 
