--- a/assets/pug/pages/unique/edit-profile.pug
+++ b/assets/pug/pages/unique/edit-profile.pug
@@ -275,16 +275,37 @@ html(lang='en')
                                                     a(href="javascript:new_form()").btn.btn-primary.text-xs.text-white(class="!w-fit sm:!w-full !m-0 py-2" type='button') Add 
      
                                         div(data-tabContent="4" class="tab-pan fade group relative first:rounded-tl-none rounded-5 border-none !px-1 !pb-0")
-                                            div 
-                                                h5.font-bold Password Manager 
-                                                div.flex.items-base.justify-between.gap-2 
-                                                    div
-                                                        h6.font-semibold Offer to save passwords
-                                                    label.inline-flex.relative.items-center.cursor-pointer
-                                                        input.sr-only.peer(type='checkbox')
-                                                        span.w-7.h-4.rounded-full.peer(class="ring-2 ring-success peer-focus:ring-2 peer-focus:ring-success peer-checked:after:translate-x-full peer-checked:after:border-white after:content-[''] after:absolute after:top-[14px] after:left-[2px] after:bg-success after:rounded-full after:h-3 after:w-3 after:transition-all")
+                                            div.flex.flex-col.gap-4
+                                                div(class="border-b border-border-light last:border-none pb-5 last:pb-0") 
+                                                    h6.font-bold(class="mb-[2px]") Password Manager
+                                                    div.flex.items-base.justify-between.gap-2(class="border-b border-border-light last:border-none pb-5 pt-5 first:pt-0 last:pb-0")
+                                                        span.font-semibold(class="text-[15px]") Offer to save passwords
+                                                        label.inline-flex.relative.items-center.cursor-pointer
+                                                            input.sr-only.peer(type='checkbox')
+                                                            span.w-7.h-4.bg-content.rounded-full.peer(class="peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[3px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary")
+                                                    div(class="border-b border-border-light last:border-none pb-5 pt-5 first:pt-0 last:pb-0")
+                                                        span.font-semibold(class="text-[15px]") Auto Sign-in
+                                                        div.flex.items-base.justify-between.gap-2 
+                                                            p.text-content3.text-2xs(class="mb-[2px]") Use saved credentials to log in automatically to websites and applications. If it's disabled, you'll always be prompted for confirmation before logging in to a website or app. 
+                                                            label.inline-flex.relative.items-base.cursor-pointer
+                                                                input.sr-only.peer(type='checkbox')
+                                                                span.w-7.h-4.bg-content.rounded-full.peer(class="peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary")
+                                                div(class="border-b border-border-light last:border-none pb-5 last:pb-0") 
+                                                    h6.font-bold(class="mb-[2px]") Payment Method
+                                                    div(class="border-b border-border-light last:border-none pb-5 pt-5 first:pt-0 last:pb-0")
+                                                        span.font-semibold(class="text-[15px]") Save and fill payment methods
+                                                        div.flex.items-base.justify-between.gap-2 
+                                                            p.text-content3.text-2xs(class="mb-[2px]") Utilises your saved payment methods to complete payment forms 
+                                                            label.inline-flex.relative.items-base.cursor-pointer
+                                                                input.sr-only.peer(type='checkbox')
+                                                                span.w-7.h-4.bg-content.rounded-full.peer(class="peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[2px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary")
+                                                    div.flex.items-base.justify-between.gap-2(class="border-b border-border-light last:border-none pb-5 pt-5 first:pt-0 last:pb-0")
+                                                        span.font-semibold(class="text-[15px]") Allow sites to check if you have payment methods savedx
+                                                        label.inline-flex.relative.items-center.cursor-pointer
+                                                            input.sr-only.peer(type='checkbox')
+                                                            span.w-7.h-4.bg-content.rounded-full.peer(class="peer-focus:outline-none peer-checked:after:translate-x-full peer-checked:after:content-white after:content-[''] after:absolute after:top-[3px] after:left-[2px] after:bg-white after:border-gray-light after:border after:rounded-full after:h-3 after:w-3 after:transition-all peer-checked:bg-primary")
+                                                  
 
-                                                
                                                 
                                             
                     
