changes in edit profile page

--- a/assets/pug/mixin/element-user-follower.pug
+++ b/assets/pug/mixin/element-user-follower.pug
@@ -62,15 +62,15 @@ mixin user_suggestion(data)
         div.card-body
             ul.flex.flex-col.gap-3 
                 each item in data 
-                    li.flex.justify-between.items-center
+                    li.flex.justify-between.items-center.suggest-friend
                         div.flex.items-center.gap-2.w-full
                             div.avatar.rounded-full(class="w-10 h-10")
                                 img(src=`../../assets/images/user-app/${item.image}` alt=`${item.title}`)                                                      
                             div(class="w-[calc(100%_-_52px)]") 
-                                p.text-title(class="font-semibold text-xs")=item.userName
+                                p.text-title(class="text-xs font-semibold")=item.userName
                                 span.text-content3(class="font-semibold text-2xs")=item.userProfile
-                        a(href="javascript:void(0)").btn.btn-success.btn-outline.p-1.group 
-                            i(data-feather="user-plus" class="w-4 h-4 stroke-success group-hover:stroke-white") 
+                        a(href="javascript:void(0)").btn.btn-primary.btn-outline.p-1.group.suggest-btn
+                            +SVG_ICON("Profile", "w-4 h-4 stroke-primary group-hover:stroke-white") 
 
 mixin user_friend(data)
     div.card
@@ -81,15 +81,15 @@ mixin user_friend(data)
         div.card-body
             ul.flex.flex-col.gap-3 
                 each item in data 
-                    li.flex.justify-between.items-center
+                    li.flex.justify-between.items-center.add-friend
                         div.flex.items-center.gap-2.w-full
                             div.avatar.rounded-full(class="w-10 h-10")
                                 img(src=`../../assets/images/user-app/${item.image1}` alt=`${item.title1}`)                                                      
                             div(class="w-[calc(100%_-_52px)]") 
-                                p.text-title(class="font-semibold text-xs")=item.userName1
+                                p.text-title(class="text-xs font-semibold")=item.userName1
                                 span.text-content3(class="font-semibold text-2xs")=item.userProfile1
-                        a(href="javascript:void(0)").btn.bg-gray-light.py-1.px-2  Add
-                
+                        a(href="javascript:void(0)").add-btn.btn.bg-gray-light.p-2  Add
+
 mixin user_follower(data)
     div.card
         div.card-header.flex.justify-between.items-center.gap-1 
@@ -99,15 +99,15 @@ mixin user_follower(data)
         div.card-body
             ul.flex.flex-col.gap-3 
                 each item in data 
-                    li.flex.justify-between.items-center
+                    li.flex.justify-between.items-center.follow-friend
                         div.flex.items-center.gap-2.w-full
                             div.avatar.rounded-full(class="w-10 h-10")
                                 img(src=`../../assets/images/user-app/${item.image2}` alt=`${item.title2}`)                                                      
                             div(class="w-[calc(100%_-_52px)]") 
-                                p.text-title(class="font-semibold text-xs")=item.userName2
+                                p.text-title(class="text-xs font-semibold")=item.userName2
                                 span.text-content3(class="font-semibold text-2xs")=item.userProfile2
-                        a(href="javascript:void(0)").btn.bg-gray-light.py-1.px-2 Follow
+                        a(href="javascript:void(0)").follow-btn.btn.bg-gray-light.p-2 Follow
 
-                
+
 
 
