--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5947,6 +5947,9 @@ code[class*="language-"],
 .mb-\[20px\] {
   margin-bottom: 20px;
 }
+.mb-\[2px\] {
+  margin-bottom: 2px;
+}
 .ml-5 {
   margin-left: 1.25rem;
 }
@@ -6045,9 +6048,6 @@ code[class*="language-"],
 }
 .mt-card-gap {
   margin-top: calc(0.9375rem + (1.875 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
-}
-.mb-\[2px\] {
-  margin-bottom: 2px;
 }
 .box-border {
   box-sizing: border-box;
@@ -6153,9 +6153,6 @@ code[class*="language-"],
 }
 .h-\[0\.40rem\] {
   height: 0.40rem;
-}
-.h-\[0\.60rem\] {
-  height: 0.60rem;
 }
 .h-\[0\.65rem\] {
   height: 0.65rem;
@@ -6398,6 +6395,12 @@ code[class*="language-"],
   height: -moz-max-content;
   height: max-content;
 }
+.h-\[1\.15rem\] {
+  height: 1.15rem;
+}
+.\!h-\[1\.15rem\] {
+  height: 1.15rem !important;
+}
 .max-h-\[120px\] {
   max-height: 120px;
 }
@@ -6544,9 +6547,6 @@ code[class*="language-"],
 }
 .w-\[0\.40rem\] {
   width: 0.40rem;
-}
-.w-\[0\.60rem\] {
-  width: 0.60rem;
 }
 .w-\[0\.65rem\] {
   width: 0.65rem;
@@ -6992,6 +6992,12 @@ code[class*="language-"],
   min-width: -moz-max-content;
   min-width: max-content;
 }
+.min-w-\[1\.10rem\] {
+  min-width: 1.10rem;
+}
+.min-w-\[1\.15rem\] {
+  min-width: 1.15rem;
+}
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -7229,6 +7235,9 @@ code[class*="language-"],
 .flex-col {
   flex-direction: column;
 }
+.\!flex-col {
+  flex-direction: column !important;
+}
 .flex-wrap {
   flex-wrap: wrap;
 }
@@ -7372,6 +7381,9 @@ code[class*="language-"],
 }
 .gap-card-space {
   gap: calc(0.9375rem + (1.0625 - 0.9375) * ((100vw - 20rem) / (120 - 20)));
+}
+.\!gap-4 {
+  gap: 1rem !important;
 }
 .gap-y-\[0\.25rem\] {
   row-gap: 0.25rem;
@@ -8413,6 +8425,9 @@ code[class*="language-"],
 .text-\[13px\] {
   font-size: 13px;
 }
+.text-\[15px\] {
+  font-size: 15px;
+}
 .text-\[26px\] {
   font-size: 26px;
 }
@@ -8461,9 +8476,6 @@ code[class*="language-"],
   font-size: 0.875rem;
   line-height: 1.4;
   letter-spacing: 0.025rem;
-}
-.text-\[15px\] {
-  font-size: 15px;
 }
 .font-black {
   font-weight: 900;
@@ -10733,6 +10745,14 @@ code[class*="language-"],
   content: var(--tw-content);
   height: 2px;
 }
+.before\:h-3::before {
+  content: var(--tw-content);
+  height: 0.75rem;
+}
+.before\:\!h-3::before {
+  content: var(--tw-content);
+  height: 0.75rem !important;
+}
 .before\:w-0::before {
   content: var(--tw-content);
   width: 0px;
@@ -10740,6 +10760,14 @@ code[class*="language-"],
 .before\:w-full::before {
   content: var(--tw-content);
   width: 100%;
+}
+.before\:w-3::before {
+  content: var(--tw-content);
+  width: 0.75rem;
+}
+.before\:\!w-3::before {
+  content: var(--tw-content);
+  width: 0.75rem !important;
 }
 .before\:-translate-x-1\/2::before {
   content: var(--tw-content);
@@ -10803,17 +10831,9 @@ code[class*="language-"],
   content: var(--tw-content);
   top: 0.25rem;
 }
-.after\:top-\[14px\]::after {
-  content: var(--tw-content);
-  top: 14px;
-}
 .after\:top-\[2px\]::after {
   content: var(--tw-content);
   top: 2px;
-}
-.after\:top-\[4px\]::after {
-  content: var(--tw-content);
-  top: 4px;
 }
 .after\:top-\[3px\]::after {
   content: var(--tw-content);
@@ -11529,6 +11549,12 @@ code[class*="language-"],
   }
   .\34xl\:col-span-8 {
     grid-column: span 8 / span 8;
+  }
+  .\34xl\:col-span-5 {
+    grid-column: span 5 / span 5;
+  }
+  .\34xl\:col-span-7 {
+    grid-column: span 7 / span 7;
   }
   .\34xl\:-mt-\[37px\] {
     margin-top: -37px;
@@ -12935,6 +12961,10 @@ code[class*="language-"],
   .\32md\:min-w-max {
     min-width: -moz-max-content;
     min-width: max-content;
+  }
+  .\32md\:min-w-fit {
+    min-width: -moz-fit-content;
+    min-width: fit-content;
   }
   .\32md\:max-w-\[60\%\] {
     max-width: 60%;
